[package]
name = "dl-file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
futures = "0.3"
pin-project-lite = "0.2"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["fs", "sync", "bytes"] }
tracing = { version = "0.1", optional = true }


[features]
default = ["tracing"]
tracing = ["dep:tracing"]
